--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,16 @@ margin-left: 34px;
   margin-right: 15px;
 }
 
-.hashtag b {
+.info {
   color: #4d4959;
+  margin-top: 96px;
+  margin-bottom: 100px;
+  margin-left: 250px;
+  font-size: 13,9px;
+  text-transform: none;
+}
+
+.info b {
+  font-size: 16px;
 }
 
