--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,44 @@
 body {
-  min-width: 1200px;
-  margin: 0;
-  padding: 0;
-  font-size: 14px;
-  line-height: 21px;
-  color: #333333;
-  font-family: "Lato", "arial", sans-serif;
-  text-transform: uppercase;
-  background-color: #f2f2f2;
+min-width: 1600px;
+margin: 0;
+padding: 0;
+font-size: 14px;
+line-height: 21px;
+color: #333333;
+font-family: "Lato", "arial", sans-serif;
+text-transform: uppercase;
+background-color: #f2f2f2;
 }
-
 html,
 body {
-  height: 100%;
+height: 100%;
 }
-
+main {
+width: 1600px;
+}
 a {
-  text-decoration: none;
+text-decoration: none;
 }
-
 .page-wrapper {
-  position: relative;
-  width: 1600px;
-  margin: 0 auto;
-  background-color: #fff;
+position: relative;
+width: 1600px;
+margin: 0 auto;
+background-color: #fff;
 }
-
 .header-img {
 background-image: url("../img/index-bg.jpg");
 background-position: center;
 background-repeat: no-repeat;
 background-color: #eef0f6;
-background-size: 100% 800px;
 height: 800px;
 width: 100%;
 }
-
 .page-header {
 margin: 0 auto;
 }
-
 .main-nav {
 margin-left: 484px;
 }
-
 .main-nav-list {
 font-size: 13px;
 line-height: 26px;
@@ -53,74 +48,104 @@ display: flex;
 margin: 0 auto;
 padding: 0;
 }
-
 .logo {
 margin-top: 35px;
 left: 50%;
 margin-left: 75px;
 margin-right: 64px;
 }
-
 .nav {
 margin-top: 66px;
 }
-
 .dot-one {
 margin-right: 35px;
 margin-left: 40px;
 }
-
 .dot-two {
 margin-right: 34px;
 margin-left: 34px;
 }
-
 .main-nav-list a {
-  color: #4d4959;
+color: #4d4959;
 }
-
-
-
-
-
-
-
-
+.eee {
+background-color: #f7f7f7;
+text-align:center;
+padding-top: 117px;
+padding-bottom: 140px;
+font-size: 18px;
+line-height: 34px;
+}
+.eee p {
+text-transform: none;
+}
+.eee h3 {
+letter-spacing: 2px;
+}
+main {
+margin: 0 auto;
+}
+.vin-img {
+background-image: url(../img/vintage-big.jpg);
+background-position: center;
+background-repeat: no-repeat;
+background-color: #282f35;
+height: 600px;
+width: 1067px;
+}
+.vin-img {
+text-align: center;
+}
+.vintage {
+display: flex;
+}
+.la-bor-img {
+background-image: url(../img/la-bor-big.jpg);
+background-position: center;
+background-repeat: no-repeat;
+background-color: #282f35;
+height: 600px;
+width: 1067px;
+}
+.la-bor-img {
+text-align: center;
+}
+.la-boriosa {
+display: flex;
+}
+.retro {
+display: flex;
+}
 .footer-wrapper {
-  display: flex;
-  width: 1600px;
-  margin: 0 auto;
-  background-color: #f7f7f7;
+display: flex;
+width: 1600px;
+margin: 0 auto;
+background-color: #f7f7f7;
 }
-
 .social  {
-  position: absolute;
-  left: 731px;
-  margin-top: 108px;
-  margin-bottom: 108px;
+position: absolute;
+left: 731px;
+margin-top: 108px;
+margin-bottom: 108px;
 }
 .social  ul {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  list-style: none;
+display: flex;
+justify-content: center;
+margin: 0 auto;
+list-style: none;
 }
-
 .social-btn-fb {
-  margin-left: 15px;
-  margin-right: 15px;
+margin-left: 15px;
+margin-right: 15px;
 }
-
 .info {
-  color: #4d4959;
-  margin-top: 96px;
-  margin-bottom: 100px;
-  margin-left: 250px;
-  font-size: 13,9px;
-  text-transform: none;
+color: #4d4959;
+margin-top: 96px;
+margin-bottom: 100px;
+margin-left: 250px;
+font-size: 13,9px;
+text-transform: none;
 }
-
 .info b {
-  font-size: 16px;
+font-size: 16px;
 }
-
