--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,32 @@ margin: 0;
 padding: 0;
 font-size: 14px;
 line-height: 21px;
-color: #333333;
+color: #000000;
 font-family: "Lato", "arial", sans-serif;
 text-transform: uppercase;
 background-color: #f2f2f2;
 }
+
 html,
 body {
 height: 100%;
 }
+
 main {
 width: 1600px;
 }
+
 a {
 text-decoration: none;
 }
+
 .page-wrapper {
 position: relative;
 width: 1600px;
 margin: 0 auto;
 background-color: #fff;
 }
+
 .header-img {
 background-image: url("../img/index-bg.jpg");
 background-position: center;
@@ -33,12 +38,15 @@ background-color: #eef0f6;
 height: 800px;
 width: 100%;
 }
+
 .page-header {
 margin: 0 auto;
 }
+
 .main-nav {
 margin-left: 484px;
 }
+
 .main-nav-list {
 font-size: 13px;
 line-height: 26px;
@@ -48,96 +56,244 @@ display: flex;
 margin: 0 auto;
 padding: 0;
 }
+
 .logo {
 margin-top: 35px;
 left: 50%;
 margin-left: 75px;
 margin-right: 64px;
 }
+
 .nav {
 margin-top: 66px;
 }
+
 .dot-one {
 margin-right: 35px;
 margin-left: 40px;
 }
+
 .dot-two {
 margin-right: 34px;
 margin-left: 34px;
 }
+
 .main-nav-list a {
 color: #4d4959;
 }
-.eee {
+
+.menu {
 background-color: #f7f7f7;
 text-align:center;
-padding-top: 117px;
-padding-bottom: 140px;
 font-size: 18px;
 line-height: 34px;
 }
-.eee p {
-text-transform: none;
+
+.new-generation {
+padding-top: 117px;
+padding-bottom: 140px;
 }
-.eee h3 {
+
+.menu p {
+text-transform: none;
+color: #9b9d9f;
+}
+
+.menu h3 {
 letter-spacing: 2px;
 }
+
 main {
 margin: 0 auto;
 }
+
 .vin-img {
 background-image: url(../img/vintage-big.jpg);
 background-position: center;
 background-repeat: no-repeat;
 background-color: #282f35;
 height: 600px;
-width: 1067px;
-}
-.vin-img {
+width: 66.6668%;
 text-align: center;
 }
+
+.menu-text {
+width: 33.3334%;
+padding-top: 70px;
+background-color: #fff;
+font-size: 16px;
+line-height: 30px;
+}
+
+.menu-text p {
+padding-right: 60px;
+padding-left: 60px;
+text-align: justify;
+margin-top: 0px;
+}
+
 .vintage {
 display: flex;
 }
+
 .la-bor-img {
 background-image: url(../img/la-bor-big.jpg);
 background-position: center;
 background-repeat: no-repeat;
 background-color: #282f35;
 height: 600px;
-width: 1067px;
+width: 66.6668%;
 }
+
+.la-bor-text {
+width: 33.3334%;
+padding-top: 60px;
+background-color: #fff;
+}
+
 .la-bor-img {
 text-align: center;
 }
+
 .la-boriosa {
 display: flex;
 }
+
 .retro {
 display: flex;
 }
+
+.retro-left-img {
+background-color: #282f35;
+width: 33.3334%;
+height: 600px;
+}
+
+.retro-right-img {
+background-color: #282f35;
+width: 33.3334%;
+height: 600px;
+}
+
+.retro-text {
+width: 33.3334%;
+padding-top: 58px;
+background-color: #fff;
+}
+
+.galery {
+background-color: #282f35;
+width: 100%;
+height: 534px;
+}
+
+.discover {
+width: 100%;
+height: 200px;
+background-color: #282f35;
+}
+
+.btn-discover {
+display: block;
+border-radius: 0px;
+border: 1px solid #94979a;
+background-color: #282f35;
+outline: none;
+padding-left: 60px;
+padding-right: 55px;
+padding-top: 18px;
+padding-bottom: 18px;
+font-size: 14px;
+letter-spacing: 2px;
+color: #fff;
+text-transform: uppercase;
+margin-left: auto;
+margin-right: auto;
+}
+
+.btn {
+padding-top: 75px;
+}
+
+.offer {
+background-color: #fff;
+text-align: center;
+}
+
+.offer-img {
+padding-top: 109px;
+}
+
+.offer-title {
+text-transform: none;
+color: #848789;
+}
+
+.btn-offer {
+display: flex;
+padding-top: 34px;
+padding-bottom: 111px;
+margin-left: 533px;
+}
+
+.btn-enter {
+display: block;
+border-radius: 0px;
+border: 1px solid #d1d1d1;
+background-color: #fff;
+outline: none;
+padding-left: 25px;
+padding-right: 225px;
+padding-top: 27px;
+padding-bottom: 23px;
+font-size: 20px;
+color: #d1d1d1;
+text-transform: lowercase;
+font-style: italic;
+}
+
+.btn-go {
+display: block;
+border-radius: 0px;
+border: 1px solid #64c29e;
+background-color: #64c29e;
+outline: none;
+padding-left: 49px;
+padding-right: 47px;
+padding-top: 27px;
+padding-bottom: 23px;
+font-size: 24px;
+color: #fff;
+text-transform: uppercase;
+margin-left: 8px;
+}
+
 .footer-wrapper {
 display: flex;
 width: 1600px;
 margin: 0 auto;
 background-color: #f7f7f7;
 }
+
 .social  {
 position: absolute;
 left: 731px;
 margin-top: 108px;
 margin-bottom: 108px;
 }
+
 .social  ul {
 display: flex;
 justify-content: center;
 margin: 0 auto;
 list-style: none;
 }
+
 .social-btn-fb {
 margin-left: 15px;
 margin-right: 15px;
 }
+
 .info {
 color: #4d4959;
 margin-top: 96px;
@@ -146,6 +302,7 @@ margin-left: 250px;
 font-size: 13,9px;
 text-transform: none;
 }
+
 .info b {
 font-size: 16px;
 }
