--- a/css/style.css
+++ b/css/style.css
@@ -23,28 +23,22 @@ a {
 text-decoration: none;
 }
 
-.page-wrapper {
-position: relative;
-width: 1600px;
-margin: 0 auto;
-background-color: #fff;
-}
 
-.header-img {
+
+.page-header {
 background-image: url("../img/index-bg.jpg");
+position: relative;
 background-position: center;
 background-repeat: no-repeat;
 background-color: #eef0f6;
 height: 800px;
 width: 100%;
-}
-
-.page-header {
 margin: 0 auto;
 }
 
 .main-nav {
-margin-left: 484px;
+  width: 700px;
+  margin: 0 auto;
 }
 
 .main-nav-list {
@@ -68,12 +62,14 @@ margin-right: 64px;
 margin-top: 66px;
 }
 
-.dot-one {
+.nav-one::after {
+content: ".";
 margin-right: 35px;
 margin-left: 40px;
 }
 
-.dot-two {
+.nav-two::after {
+content: ".";
 margin-right: 34px;
 margin-left: 34px;
 }
@@ -82,7 +78,7 @@ margin-left: 34px;
 color: #4d4959;
 }
 
-.menu {
+.features {
 background-color: #f7f7f7;
 text-align:center;
 font-size: 18px;
@@ -94,12 +90,12 @@ padding-top: 117px;
 padding-bottom: 140px;
 }
 
-.menu p {
+.features p {
 text-transform: none;
 color: #9b9d9f;
 }
 
-.menu h3 {
+.features h3 {
 letter-spacing: 2px;
 }
 
@@ -108,16 +104,12 @@ margin: 0 auto;
 }
 
 .vin-img {
-background-image: url(../img/vintage-big.jpg);
-background-position: center;
-background-repeat: no-repeat;
 background-color: #282f35;
+width: 1067px;
 height: 600px;
-width: 66.6668%;
-text-align: center;
 }
 
-.menu-text {
+.features-text {
 width: 33.3334%;
 padding-top: 70px;
 background-color: #fff;
@@ -125,7 +117,7 @@ font-size: 16px;
 line-height: 30px;
 }
 
-.menu-text p {
+.features-text p {
 padding-right: 60px;
 padding-left: 60px;
 text-align: justify;
@@ -133,16 +125,14 @@ margin-top: 0px;
 }
 
 .vintage {
+overflow: hidden;
 display: flex;
 }
 
 .la-bor-img {
-background-image: url(../img/la-bor-big.jpg);
-background-position: center;
-background-repeat: no-repeat;
 background-color: #282f35;
 height: 600px;
-width: 66.6668%;
+width: 1067px;
 }
 
 .la-bor-text {
@@ -151,11 +141,9 @@ padding-top: 60px;
 background-color: #fff;
 }
 
-.la-bor-img {
-text-align: center;
-}
 
 .la-boriosa {
+overflow: hidden;
 display: flex;
 }
 
@@ -184,7 +172,35 @@ background-color: #fff;
 .galery {
 background-color: #282f35;
 width: 100%;
-height: 534px;
+}
+
+.gal-left {
+display: flex;
+flex-wrap: wrap;
+width: 33.3334%;
+}
+
+.gal-left-top {
+display: flex;
+height: auto;
+}
+
+.gal-center {
+display: flex;
+}
+
+.gal-right {
+display: flex;
+flex-wrap: wrap;
+}
+
+
+.gal-right-button {
+display: flex;
+}
+
+.galery-img {
+display: flex;
 }
 
 .discover {
@@ -207,12 +223,12 @@ font-size: 14px;
 letter-spacing: 2px;
 color: #fff;
 text-transform: uppercase;
-margin-left: auto;
-margin-right: auto;
 }
 
 .btn {
 padding-top: 75px;
+padding-right: 650px;
+padding-left: 650px;
 }
 
 .offer {
@@ -233,7 +249,7 @@ color: #848789;
 display: flex;
 padding-top: 34px;
 padding-bottom: 111px;
-margin-left: 533px;
+justify-content: center;
 }
 
 .btn-enter {
@@ -271,22 +287,27 @@ margin-left: 8px;
 .footer-wrapper {
 display: flex;
 width: 1600px;
-margin: 0 auto;
 background-color: #f7f7f7;
+margin: 0 auto;
+}
+
+.footer-info {
+width: 1100px;
+margin: 0 auto;
+display: flex;
+
 }
 
 .social  {
-position: absolute;
-left: 731px;
 margin-top: 108px;
 margin-bottom: 108px;
 }
 
 .social  ul {
 display: flex;
-justify-content: center;
 margin: 0 auto;
 list-style: none;
+padding: 0;
 }
 
 .social-btn-fb {
@@ -298,9 +319,9 @@ margin-right: 15px;
 color: #4d4959;
 margin-top: 96px;
 margin-bottom: 100px;
-margin-left: 250px;
 font-size: 13,9px;
 text-transform: none;
+
 }
 
 .info b {
