--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ justify-content: center;
 .logo {
 margin-top: 35px;
 left: 50%;
-margin-left: 42px;
+margin-left: 31px;
 margin-right: 31px;
 }
 
@@ -65,6 +65,7 @@ padding-top: 0;
 padding-bottom: 0;
 padding-right: 0;
 padding-left: 33px;
+min-width: 85px;
 }
 
 .nav:nth-of-type(2n+1):after {
@@ -279,8 +280,9 @@ display: flex;
 
 .discover {
 width: 100%;
-height: 200px;
+height: 125px;
 background-color: #282f35;
+padding-top: 75px;
 }
 
 .btn-discover {
@@ -300,11 +302,12 @@ text-transform: uppercase;
 cursor:pointer;
 }
 
-.btn {
-padding-top: 75px;
-padding-right: 650px;
-padding-left: 650px;
+.btn-discover {
+text-align: center;
+max-width: 300px;
+margin: auto;
 }
+
 
 .offer {
 background-color: #fff;
@@ -430,6 +433,7 @@ letter-spacing: 2px;
 .cl-head p {
 padding-left: 5px;
 color: #9b9d9f;
+padding-top: 3px;
 }
 
 .cl-text p {
@@ -440,4 +444,18 @@ font-size: 24px;
 line-height: 34px;
 color: #9b9d9f;
 padding-bottom: 100px;
+}
+
+.slick-dots li {
+position: relative;
+display: inline-block;
+width: 20px;
+height: 20px;
+margin: 0;
+padding: 0;
+cursor: pointer;
+}
+
+.slick-dots li button:before {
+    color: #a9afb3;
 }
